@@ -2,6 +2,7 @@
  - fix: disable table graphs widget when an image-type table is shown
  - fix: accessing table data from DCOR
  - enh: do not keep dataset references in QuickView, only remember IDs
+ - enh: use bulk emodulus computation as viscosity calculator
  - setup: bump dclab to 0.62.13
 2.21.4
  - fix: incorrect path list check when loading broken dataset
